Function 3 is working but by exporting .csv file and using bulk insert

--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -214,7 +214,7 @@
         "colab_type": "code",
         "id": "o12Z44mZRiBb",
         "colab": {},
-        "outputId": "111197a8-50cc-4373-8ea0-6db7188d88f4"
+        "outputId": "2b0ad0f0-41d3-458f-cce6-2ad93a61b87e"
       },
       "source": [
         "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
@@ -258,28 +258,28 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>@TSIKALIRA Hi, pls DM us your contact details ...</td>\n",
-              "      <td>2020-03-10 06:32:50</td>\n",
+              "      <td>Report electricity theft anonymously to Eskom ...</td>\n",
+              "      <td>2020-03-10 12:38:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
-              "      <td>#POWERALERT 1\\nDate: 10 March 2020\\n\\nStage 2 ...</td>\n",
-              "      <td>2020-03-10 05:37:17</td>\n",
+              "      <td>#POWERALERT 2\\n\\nDate: 10 March 2020\\n\\nStage ...</td>\n",
+              "      <td>2020-03-10 11:50:38</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>Protect your electrical appliances by unpluggi...</td>\n",
-              "      <td>2020-03-10 04:30:00</td>\n",
+              "      <td>#Chooseday: Choose to do the right thing and p...</td>\n",
+              "      <td>2020-03-10 10:06:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>@Jeandre_S @CityTshwane @SABCNewsOnline @SABCR...</td>\n",
-              "      <td>2020-03-09 17:32:41</td>\n",
+              "      <td>Prepaid pricing is based on usage/consumption ...</td>\n",
+              "      <td>2020-03-10 08:30:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>4</td>\n",
-              "      <td>@Antifreez777za @SikonathiM Please see our tim...</td>\n",
-              "      <td>2020-03-09 17:26:55</td>\n",
+              "      <td>@TSIKALIRA Hi, pls DM us your contact details ...</td>\n",
+              "      <td>2020-03-10 06:32:50</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>...</td>\n",
@@ -288,28 +288,28 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <td>88</td>\n",
-              "      <td>Before you leave the house, switch off or unpl...</td>\n",
-              "      <td>2020-03-02 04:10:00</td>\n",
+              "      <td>#DYK that you can report #poweroutages via MyE...</td>\n",
+              "      <td>2020-03-02 08:45:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>89</td>\n",
-              "      <td>#POWERALERT 1\\nDate: 01 March 2020\\n\\nNo loads...</td>\n",
-              "      <td>2020-03-01 17:04:06</td>\n",
+              "      <td>#POWERALERT 1\\nDate: 02 March 2020\\n\\nNo loads...</td>\n",
+              "      <td>2020-03-02 07:06:17</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>90</td>\n",
-              "      <td>Report electricity theft anonymously to Eskom ...</td>\n",
-              "      <td>2020-03-01 16:30:00</td>\n",
+              "      <td>How to use electricity efficiently at work\\n\\n...</td>\n",
+              "      <td>2020-03-02 06:37:47</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>91</td>\n",
-              "      <td>#PublicSafety: Make sure that you and your fam...</td>\n",
-              "      <td>2020-03-01 13:06:00</td>\n",
+              "      <td>@MissG2040 Prepaid pricing is based on usage/ ...</td>\n",
+              "      <td>2020-03-02 06:28:38</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>92</td>\n",
-              "      <td>Cable theft is one of the main reasons for con...</td>\n",
-              "      <td>2020-03-01 10:32:00</td>\n",
+              "      <td>Before you leave the house, switch off or unpl...</td>\n",
+              "      <td>2020-03-02 04:10:00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -318,17 +318,17 @@
             ],
             "text/plain": [
               "                                               Tweets                Date\n",
-              "0   @TSIKALIRA Hi, pls DM us your contact details ... 2020-03-10 06:32:50\n",
-              "1   #POWERALERT 1\\nDate: 10 March 2020\\n\\nStage 2 ... 2020-03-10 05:37:17\n",
-              "2   Protect your electrical appliances by unpluggi... 2020-03-10 04:30:00\n",
-              "3   @Jeandre_S @CityTshwane @SABCNewsOnline @SABCR... 2020-03-09 17:32:41\n",
-              "4   @Antifreez777za @SikonathiM Please see our tim... 2020-03-09 17:26:55\n",
+              "0   Report electricity theft anonymously to Eskom ... 2020-03-10 12:38:00\n",
+              "1   #POWERALERT 2\\n\\nDate: 10 March 2020\\n\\nStage ... 2020-03-10 11:50:38\n",
+              "2   #Chooseday: Choose to do the right thing and p... 2020-03-10 10:06:00\n",
+              "3   Prepaid pricing is based on usage/consumption ... 2020-03-10 08:30:00\n",
+              "4   @TSIKALIRA Hi, pls DM us your contact details ... 2020-03-10 06:32:50\n",
               "..                                                ...                 ...\n",
-              "88  Before you leave the house, switch off or unpl... 2020-03-02 04:10:00\n",
-              "89  #POWERALERT 1\\nDate: 01 March 2020\\n\\nNo loads... 2020-03-01 17:04:06\n",
-              "90  Report electricity theft anonymously to Eskom ... 2020-03-01 16:30:00\n",
-              "91  #PublicSafety: Make sure that you and your fam... 2020-03-01 13:06:00\n",
-              "92  Cable theft is one of the main reasons for con... 2020-03-01 10:32:00\n",
+              "88  #DYK that you can report #poweroutages via MyE... 2020-03-02 08:45:00\n",
+              "89  #POWERALERT 1\\nDate: 02 March 2020\\n\\nNo loads... 2020-03-02 07:06:17\n",
+              "90  How to use electricity efficiently at work\\n\\n... 2020-03-02 06:37:47\n",
+              "91  @MissG2040 Prepaid pricing is based on usage/ ... 2020-03-02 06:28:38\n",
+              "92  Before you leave the house, switch off or unpl... 2020-03-02 04:10:00\n",
               "\n",
               "[93 rows x 2 columns]"
             ]
@@ -336,7 +336,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 43
         }
       ]
     },
@@ -432,14 +432,36 @@
         "    '''\n",
         "\n",
         "    ### Code Here\n",
-        "    #loading: Mikael\n",
-        "    df = pd.read_sql_query('select * from dbo.all_stations',connection)\n",
-        "    #updating tables in SQL: Monica\n",
         "\n",
-        "    return df.head()"
+        "    cursor = connection.cursor()\n",
+        "    #convert the dataframe to .csv file\n",
+        "    twitter_table.to_csv (r'C:\\Users\\monicafar147\\Desktop\\export_dataframe.csv', index = False, header=True)\n",
+        "    print('reading data from Tweets table in SQL:')\n",
+        "    tweets = pd.read_sql_query('select * from dbo.Tweets',connection)\n",
+        "   \n",
+        "    \n",
+        "\n",
+        "    return tweets"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZHtbZabTuhsh",
+        "colab_type": "text"
+      },
+      "source": [
+        "create table tweets(tweets text,dates text, municipality text, hashtags text);\n",
+        "\n",
+        "bulk insert tweets\n",
+        "from 'C:\\Users\\monicafar147\\Desktop\\export_dataframe.csv'\n",
+        "with (FIRSTROW =2, FIELDTERMINATOR=',',ROWTERMINATOR='\\n'\n",
+        ");\n",
+        "\n",
+        "select * from tweets"
+      ]
     },
     {
       "cell_type": "code",
@@ -461,10 +483,10 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "QDSex1o7uhsm",
         "colab_type": "code",
-        "id": "yP92dtK6PlI4",
         "colab": {},
-        "outputId": "2c3aa1b5-89ef-4f7a-e1dd-53614bb98386"
+        "outputId": "8c8e8628-631a-46ba-ff33-e0b50660ef68"
       },
       "source": [
         "df = twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
@@ -474,7 +496,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Number of tweets extracted: 93.\n",
+            "Number of tweets extracted: 92.\n",
             "\n"
           ],
           "name": "stdout"
@@ -484,7 +506,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "18tvTfm4S2I1",
+        "id": "DMoRu5bCuhso",
         "colab_type": "code",
         "colab": {}
       },
@@ -497,16 +519,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6QzEno8_S2I4",
+        "id": "Be4GWMNcuhss",
         "colab_type": "code",
         "colab": {},
-        "outputId": "0b4e1dc5-df87-4bf0-b3f7-c43e578c539a"
+        "outputId": "01a4281f-2257-4531-8e03-b283e4126ce9"
       },
       "source": [
         "pyodbc_twitter(connection, df, twitter_table)"
       ],
       "execution_count": 0,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "reading data from Tweets table in SQL:\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -529,85 +558,149 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>station_name</th>\n",
-              "      <th>total_installed_capacity</th>\n",
-              "      <th>total_nominal_capacity</th>\n",
-              "      <th>location</th>\n",
-              "      <th>station_type</th>\n",
+              "      <th>tweets</th>\n",
+              "      <th>dates</th>\n",
+              "      <th>municipality</th>\n",
+              "      <th>hashtags</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>Acacia</td>\n",
-              "      <td>171</td>\n",
-              "      <td>171</td>\n",
-              "      <td>Cape Town</td>\n",
-              "      <td>Gas/liquid fuel turbine stations</td>\n",
+              "      <td>Report electricity theft anonymously to Eskom ...</td>\n",
+              "      <td>2020-03-10 12:38:00</td>\n",
+              "      <td>None</td>\n",
+              "      <td>[]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
-              "      <td>Ankerlig</td>\n",
-              "      <td>1338</td>\n",
-              "      <td>1327</td>\n",
-              "      <td>Atlantis</td>\n",
-              "      <td>Gas/liquid fuel turbine stations</td>\n",
+              "      <td>\"#POWERALERT 2\\n\\nDate: 10 March 2020\\n\\nStage...</td>\n",
+              "      <td>2020-03-10 11:50:38</td>\n",
+              "      <td>None</td>\n",
+              "      <td>['#poweralert']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>Arnot</td>\n",
-              "      <td>2352</td>\n",
-              "      <td>2232</td>\n",
-              "      <td>Middelburg</td>\n",
-              "      <td>Coal</td>\n",
+              "      <td>\"#Chooseday: Choose to do the right thing and ...</td>\n",
+              "      <td>2020-03-10 10:06:00</td>\n",
+              "      <td>None</td>\n",
+              "      <td>['#chooseday:']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>Camden'</td>\n",
-              "      <td>1561</td>\n",
-              "      <td>1481</td>\n",
-              "      <td>Ermelo</td>\n",
-              "      <td>Coal</td>\n",
+              "      <td>Prepaid pricing is based on usage/consumption ...</td>\n",
+              "      <td>2020-03-10 08:30:00</td>\n",
+              "      <td>None</td>\n",
+              "      <td>[]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>4</td>\n",
-              "      <td>Colley Wobbles</td>\n",
-              "      <td>42</td>\n",
-              "      <td>0</td>\n",
-              "      <td>Mbashe River</td>\n",
-              "      <td>Hydroelectric stations</td>\n",
+              "      <td>\"@TSIKALIRA Hi</td>\n",
+              "      <td>pls DM us your contact details and we will ge...</td>\n",
+              "      <td>2020-03-10 06:32:50</td>\n",
+              "      <td>,[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>87</td>\n",
+              "      <td>\"Do the right thing and purchase only legal el...</td>\n",
+              "      <td>2020-03-02 11:30:00</td>\n",
+              "      <td>None</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>88</td>\n",
+              "      <td>#DYK that you can report #poweroutages via MyE...</td>\n",
+              "      <td>2020-03-02 08:45:00</td>\n",
+              "      <td>None</td>\n",
+              "      <td>\"['#dyk', '#poweroutages']\"</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>89</td>\n",
+              "      <td>\"#POWERALERT 1\\nDate: 02 March 2020\\n\\nNo load...</td>\n",
+              "      <td>but the possibility of loadshedding has incre...</td>\n",
+              "      <td>2020-03-02 07:06:17</td>\n",
+              "      <td>,['#poweralert']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>90</td>\n",
+              "      <td>\"How to use electricity efficiently at work\\n\\...</td>\n",
+              "      <td>2020-03-02 06:37:47</td>\n",
+              "      <td>None</td>\n",
+              "      <td>['#useelectricitysmartly']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>91</td>\n",
+              "      <td>@MissG2040 Prepaid pricing is based on usage/ ...</td>\n",
+              "      <td>2020-03-02 06:28:38</td>\n",
+              "      <td>None</td>\n",
+              "      <td>[]</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>92 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "     station_name total_installed_capacity total_nominal_capacity  \\\n",
-              "0          Acacia                      171                    171   \n",
-              "1       Ankerlig                      1338                   1327   \n",
-              "2           Arnot                     2352                   2232   \n",
-              "3         Camden'                     1561                   1481   \n",
-              "4  Colley Wobbles                       42                      0   \n",
+              "                                               tweets  \\\n",
+              "0   Report electricity theft anonymously to Eskom ...   \n",
+              "1   \"#POWERALERT 2\\n\\nDate: 10 March 2020\\n\\nStage...   \n",
+              "2   \"#Chooseday: Choose to do the right thing and ...   \n",
+              "3   Prepaid pricing is based on usage/consumption ...   \n",
+              "4                                      \"@TSIKALIRA Hi   \n",
+              "..                                                ...   \n",
+              "87  \"Do the right thing and purchase only legal el...   \n",
+              "88  #DYK that you can report #poweroutages via MyE...   \n",
+              "89  \"#POWERALERT 1\\nDate: 02 March 2020\\n\\nNo load...   \n",
+              "90  \"How to use electricity efficiently at work\\n\\...   \n",
+              "91  @MissG2040 Prepaid pricing is based on usage/ ...   \n",
               "\n",
-              "       location                      station_type  \n",
-              "0    Cape Town   Gas/liquid fuel turbine stations  \n",
-              "1      Atlantis  Gas/liquid fuel turbine stations  \n",
-              "2    Middelburg                              Coal  \n",
-              "3        Ermelo                              Coal  \n",
-              "4  Mbashe River            Hydroelectric stations  "
+              "                                                dates         municipality  \\\n",
+              "0                                 2020-03-10 12:38:00                 None   \n",
+              "1                                 2020-03-10 11:50:38                 None   \n",
+              "2                                 2020-03-10 10:06:00                 None   \n",
+              "3                                 2020-03-10 08:30:00                 None   \n",
+              "4    pls DM us your contact details and we will ge...  2020-03-10 06:32:50   \n",
+              "..                                                ...                  ...   \n",
+              "87                                2020-03-02 11:30:00                 None   \n",
+              "88                                2020-03-02 08:45:00                 None   \n",
+              "89   but the possibility of loadshedding has incre...  2020-03-02 07:06:17   \n",
+              "90                                2020-03-02 06:37:47                 None   \n",
+              "91                                2020-03-02 06:28:38                 None   \n",
+              "\n",
+              "                       hashtags  \n",
+              "0                            []  \n",
+              "1               ['#poweralert']  \n",
+              "2               ['#chooseday:']  \n",
+              "3                            []  \n",
+              "4                           ,[]  \n",
+              "..                          ...  \n",
+              "87                           []  \n",
+              "88  \"['#dyk', '#poweroutages']\"  \n",
+              "89             ,['#poweralert']  \n",
+              "90   ['#useelectricitysmartly']  \n",
+              "91                           []  \n",
+              "\n",
+              "[92 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 70
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hr7he5S5S2I7",
+        "id": "gWhTZIGsuhsv",
         "colab_type": "code",
         "colab": {}
       },
