--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Loading/Loading.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Loading.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -172,20 +172,22 @@
         "        Returns: Dataframe with two columns: 'Tweets' and 'Date'\n",
         "    ''' \n",
         "    # Code Here\n",
+        "    \n",
         "    extractor = twitter_setup()\n",
         "    \n",
         "    # We create a tweet list as follows:\n",
+        "    \n",
         "    tweets = extractor.user_timeline(screen_name=\"Eskom_SA\", \n",
         "                                     count=100,\n",
         "                                     include_rts=False)\n",
+        "    \n",
         "    print(f\"Number of tweets extracted: {len(tweets)}.\\n\")\n",
         "    \n",
         "    # We create a pandas dataframe as follows:\n",
+        "    \n",
         "    data = pd.DataFrame(data=np.column_stack([[tweet.text for tweet in tweets],\n",
         "                                              [(tweet.created_at) for tweet in tweets]]),\n",
         "                                              columns=['Tweets','Date'])\n",
-        "    # We display the first 10 elements of the dataframe:\n",
-        "    #final_df = data.head(10)\n",
         "    \n",
         "    return data"
       ],
@@ -213,8 +215,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "o12Z44mZRiBb",
-        "colab": {},
-        "outputId": "2b0ad0f0-41d3-458f-cce6-2ad93a61b87e"
+        "outputId": "2b0ad0f0-41d3-458f-cce6-2ad93a61b87e",
+        "colab": {}
       },
       "source": [
         "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
@@ -373,10 +375,8 @@
         "          df.loc[l, 'municipality'] = mun_dict[key]       \n",
         "      l += 1\n",
         "\n",
-        "    # Create 'hashtags' column: Mikael\n",
         "    df['hashtags'] = df['Tweets'].str.lower().str.split()\n",
         "\n",
-        "    # Extract hashtags from Tweets: Monica\n",
         "    hashtagslist = []\n",
         "    i = 0\n",
         "    for tweet in df['hashtags']:\n",
@@ -388,7 +388,6 @@
         "      i += 1\n",
         "    \n",
         "    df['hashtags'] = hashtagslist\n",
-        "    # Fill empty values in 'hashtags' columns with np.nan: Courtney\n",
         "\n",
         "    return df"
       ],
@@ -434,13 +433,15 @@
         "    ### Code Here\n",
         "\n",
         "    cursor = connection.cursor()\n",
+        "\n",
         "    #convert the dataframe to .csv file\n",
+        "    \n",
         "    twitter_table.to_csv (r'C:\\Users\\monicafar147\\Desktop\\export_dataframe.csv', index = False, header=True)\n",
+        "    \n",
         "    print('reading data from Tweets table in SQL:')\n",
+        "    \n",
         "    tweets = pd.read_sql_query('select * from dbo.Tweets',connection)\n",
         "   \n",
-        "    \n",
-        "\n",
         "    return tweets"
       ],
       "execution_count": 0,
@@ -485,8 +486,8 @@
       "metadata": {
         "id": "QDSex1o7uhsm",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "8c8e8628-631a-46ba-ff33-e0b50660ef68"
+        "outputId": "8c8e8628-631a-46ba-ff33-e0b50660ef68",
+        "colab": {}
       },
       "source": [
         "df = twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
@@ -521,8 +522,8 @@
       "metadata": {
         "id": "Be4GWMNcuhss",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "01a4281f-2257-4531-8e03-b283e4126ce9"
+        "outputId": "01a4281f-2257-4531-8e03-b283e4126ce9",
+        "colab": {}
       },
       "source": [
         "pyodbc_twitter(connection, df, twitter_table)"
