encrypted the consumer keys of twitter API for security

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -99,12 +99,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
-        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
+        "CONSUMER_KEY    = '**********************'\n",
+        "CONSUMER_SECRET = '**********************'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
-        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
+        "ACCESS_TOKEN  = '*********************************************'\n",
+        "ACCESS_SECRET = '*********************************************'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -346,8 +346,8 @@
       "metadata": {
         "id": "QwdSCVqALH6i",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e61dece7-4043-4a25-f72b-eb61bbdfa47c"
+        "outputId": "e61dece7-4043-4a25-f72b-eb61bbdfa47c",
+        "colab": {}
       },
       "source": [
         "new_df = extract_municipality_hashtags(twitter_table)\n",
@@ -454,8 +454,8 @@
       "metadata": {
         "id": "92CuzPb-LH6p",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "09e5c0db-06dd-4d80-fe30-f73912007aa9"
+        "outputId": "09e5c0db-06dd-4d80-fe30-f73912007aa9",
+        "colab": {}
       },
       "source": [
         "pyodbc_twitter(connection, new_df, twitter_table)"
