Encrypted access keys from twitter API for security

--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Extraction/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -86,12 +86,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
-        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
+        "CONSUMER_KEY    = '*************************'\n",
+        "CONSUMER_SECRET = '***********************************************'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
-        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
+        "ACCESS_TOKEN  = '*********************************************'\n",
+        "ACCESS_SECRET = '*********************************************'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -184,16 +184,16 @@
       "metadata": {
         "id": "k19hM6Y0M07z",
         "colab_type": "code",
+        "outputId": "60339fda-5640-4da0-9bd3-b8ab8444540b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 256
-        },
-        "outputId": "60339fda-5640-4da0-9bd3-b8ab8444540b"
+        }
       },
       "source": [
         "print(twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
