Encrypted access tokens of twitter API for security

--- a/Loading.ipynb
+++ b/Loading.ipynb
@@ -99,12 +99,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
-        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
+        "CONSUMER_KEY    = '*************************'\n",
+        "CONSUMER_SECRET = '***********************************************'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
-        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
+        "ACCESS_TOKEN  = '*********************************************'\n",
+        "ACCESS_SECRET = '*********************************************'"
       ],
       "execution_count": 0,
       "outputs": []
