encrypted twitter tokens for security

--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/Loading/Transforming.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikael-daniels/team11_pipeline/blob/master/Transforming.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -87,12 +87,12 @@
       },
       "source": [
         "# Consumer:\n",
-        "CONSUMER_KEY    = 'PDU7fauXIq4hZRdkJ62s3OYPT'\n",
-        "CONSUMER_SECRET = 'D118AztFQ9y6irrMOKLKxuU6XLKiYznIZ5d93B4ZnO5SaAzHsB'\n",
+        "CONSUMER_KEY    = '**************************'\n",
+        "CONSUMER_SECRET = '**************************************'\n",
         "\n",
         "# Access:\n",
-        "ACCESS_TOKEN  = '2954682544-Ttwu770muNrhg4KQSY6N9RYGuK33Xs2V80q8Ms8'\n",
-        "ACCESS_SECRET = '95idH7IMmvwO74eOwnDGVasxGZ4E8ftEoGEYPhfGWOmKh'"
+        "ACCESS_TOKEN  = '*********************************************'\n",
+        "ACCESS_SECRET = '*********************************************'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -201,16 +201,16 @@
       "metadata": {
         "id": "o12Z44mZRiBb",
         "colab_type": "code",
+        "outputId": "9e89c8ce-4d37-4584-9930-a35be0a37ea8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        },
-        "outputId": "9e89c8ce-4d37-4584-9930-a35be0a37ea8"
+        }
       },
       "source": [
         "twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET )"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,16 +391,16 @@
       "metadata": {
         "id": "oIbedFyf_yp_",
         "colab_type": "code",
+        "outputId": "420eb659-4ac1-47db-9b63-256228b1b67c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        },
-        "outputId": "420eb659-4ac1-47db-9b63-256228b1b67c"
+        }
       },
       "source": [
         "extract_municipality_hashtags(twitter_df(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_SECRET))"
       ],
-      "execution_count": 85,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
